--- a/Svg.css
+++ b/Svg.css
@@ -2,5 +2,8 @@ html{
   font-family: 'Roboto', sans-serif;
 }
 body{
-    background-color: "#08f";
+    background-color: #fff;
+}
+.center{
+  text-align: center;
 }
